# seismic-shakevision

./: .git_commit_msg.txt  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.en.md  README.es.md  README.fr.md  README.md  pyproject.toml  requirements.txt  tech_stack.md
.github/workflows/: ci.yml  release.yml
docs/: audit-0.7.7.md  dashboard-pro.md  events-feature-plan.md  events-i18n-timezone.md  refactor-plan.md  replay-redesign.md  roadmap.md  seismic-software-survey.md  ux-review.md  workbench-assessment.md  workbench-restructure.md
packaging/: README.md  build.py  shakevision.spec
packaging/macos/: icon.icns
packaging/windows/: version_info.txt
scripts/: download_globe_assets.py  install_fonts.sh  install_libs.sh
shakevision/: __init__.py  __main__.py  config.py
shakevision/assets/: __init__.py
shakevision/assets/fonts/: README.md
shakevision/i18n/: __init__.py  service.py
shakevision/i18n/locales/: en.json  es.json  fr.json  zh.json
shakevision/processing/: __init__.py  buffer.py  detector.py  event_filter.py  filters.py  intensity.py  magnitude_color.py  measurements.py  recorder.py  seismic_stats.py  sonifier.py  spectrum.py
shakevision/services/: __init__.py  activity_log.py  cache.py  catalog_store.py  clear_cache.py  data_models.py  dataselect.py  favorites_store.py  fdsn_event.py  fdsn_worker.py  geo_region.py  github_auth.py  iris.py  location_service.py  region_presets.py  report.py  response.py  settings_backup.py  shake_presets.py  shakenet.py  timezone_service.py  usage_tracker.py  usgs.py  worker.py
shakevision/sources/: __init__.py  base.py  mock.py  replay.py  seedlink.py
shakevision/ui/: __init__.py  add_shake_dialog.py  animations.py  app_header.py  audio_player.py  combo_utils.py  control_panel.py  dashboard_view.py  date_picker.py  elevation.py  event_center_panel.py  event_filter_bar.py  event_list_panel.py  github_login_dialog.py  globe_view.py  helicorder_widget.py  historical_search_bar.py  icons.py  intensity_card.py  layer_mode_manager.py  loading_overlay.py  localizame_view.py  macos_native.py  main_window.py  my_data_panel.py  onboarding_wizard.py  particle_motion_widget.py  pdf_exporter.py  pg_theming.py  pro_window.py  profile_dialog.py  profile_view.py  range_slider.py  replay_panel.py  settings_dialog.py  sidebar_nav.py  signal_safety.py  spectrogram_widget.py  spectrum_panel.py  splash.py  (+4 more)
shakevision/utils/: __init__.py  logging.py  periods.py  timescale.py
shakevision/web/: __init__.py
shakevision/web/dashboard/: dashboard.js  index.html  styles.css
shakevision/web/globe/: globe.js  index.html  styles.css
shakevision/web/report/: styles.css  template.html  template_analysis.html
tests/: conftest.py  test_add_shake_dialog.py  test_animations.py  test_app_header.py  test_buffer.py  test_cache.py  test_config.py  test_control_panel_fifo.py  test_dashboard_advanced.py  test_dashboard_view.py  test_dataselect.py  test_detector.py  test_event_filter.py  test_favorites_store.py  test_fdsn_event.py  test_filters.py  test_geo_region.py  test_github_auth.py  test_globe_view.py  test_helicorder.py  test_i18n.py  test_intensity.py  test_iris.py  test_loading_overlay.py  test_localizame_view.py  test_magnitude_color.py  test_measurements.py  test_mock_source.py  test_onboarding_wizard.py  test_particle_motion.py  test_pdf_exporter.py  test_periods.py  test_profile_view.py  test_recorder.py  test_recordings_list.py  test_region_presets.py  test_replay.py  test_report.py  test_report_analysis.py  test_report_pro.py  (+21 more)
